// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Melodies test suite should generate melodies based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 88,
    "next": 480,
    "note": "E5",
    "time": 0,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 85,
    "next": 720,
    "note": "C#5",
    "time": 480,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 86,
    "next": 1040,
    "note": "D5",
    "time": 720,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 83,
    "next": 1280,
    "note": "B4",
    "time": 1040,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 88,
    "next": 1440,
    "note": "E5",
    "time": 1280,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 1920,
    "note": "G#3",
    "time": 1440,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 62,
    "next": 2160,
    "note": "D3",
    "time": 1920,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 62,
    "next": 2640,
    "note": "D3",
    "time": 2160,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 66,
    "next": 2880,
    "note": "F#3",
    "time": 2640,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 69,
    "next": 3000,
    "note": "A3",
    "time": 2880,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 66,
    "next": 3720,
    "note": "F#3",
    "time": 3000,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 66,
    "next": 3840,
    "note": "F#3",
    "time": 3720,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 4320,
    "note": "G#3",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 70,
    "next": 4800,
    "note": "A#3",
    "time": 4320,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 5280,
    "note": "C#4",
    "time": 4800,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 88,
    "next": 6000,
    "note": "E5",
    "time": 5280,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 85,
    "next": 6720,
    "note": "C#5",
    "time": 6000,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 69,
    "next": 7040,
    "note": "A3",
    "time": 6720,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 7520,
    "note": "G#3",
    "time": 7040,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 7680,
    "note": "G#3",
    "time": 7520,
  },
]
`;

exports[`A Melodies test suite should generate melodies based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 480,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 74,
    "next": 960,
    "note": "D4",
    "time": 480,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 68,
    "next": 1280,
    "note": "G#3",
    "time": 960,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 1440,
    "note": "G#3",
    "time": 1280,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 1920,
    "note": "E3",
    "time": 1440,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 78,
    "next": 2240,
    "note": "F#4",
    "time": 1920,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 76,
    "next": 2400,
    "note": "E4",
    "time": 2240,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 76,
    "next": 2880,
    "note": "E4",
    "time": 2400,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 70,
    "next": 3120,
    "note": "A#3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 3360,
    "note": "G#3",
    "time": 3120,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 3600,
    "note": "C#4",
    "time": 3360,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 72,
    "next": 3840,
    "note": "C4",
    "time": 3600,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 90,
    "next": 4320,
    "note": "F#5",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 88,
    "next": 4800,
    "note": "E5",
    "time": 4320,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 5040,
    "note": "C#4",
    "time": 4800,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 5280,
    "note": "G#3",
    "time": 5040,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 66,
    "next": 5440,
    "note": "F#3",
    "time": 5280,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 64,
    "next": 5760,
    "note": "E3",
    "time": 5440,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 6080,
    "note": "E4",
    "time": 5760,
  },
  Object {
    "dur": 640,
    "isRest": false,
    "midi": 71,
    "next": 6720,
    "note": "B3",
    "time": 6080,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 7040,
    "note": "E4",
    "time": 6720,
  },
  Object {
    "dur": 640,
    "isRest": false,
    "midi": 71,
    "next": 7680,
    "note": "B3",
    "time": 7040,
  },
]
`;

exports[`A Melodies test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 63,
    "next": 480,
    "note": "Eb3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 63,
    "next": 960,
    "note": "Eb3",
    "time": 480,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 60,
    "next": 1280,
    "note": "C3",
    "time": 960,
  },
  Object {
    "dur": 160,
    "isRest": true,
    "midi": -1,
    "next": 1440,
    "note": "",
    "time": 1280,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 74,
    "next": 1680,
    "note": "D4",
    "time": 1440,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 77,
    "next": 1920,
    "note": "F4",
    "time": 1680,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 2400,
    "note": "Ab3",
    "time": 1920,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 2880,
    "note": "Ab3",
    "time": 2400,
  },
  Object {
    "dur": 480,
    "isRest": true,
    "midi": -1,
    "next": 3360,
    "note": "",
    "time": 2880,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 60,
    "next": 3720,
    "note": "C3",
    "time": 3360,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 3840,
    "note": "",
    "time": 3720,
  },
]
`;
